release: bump to 0.10.0 — Folia fixes, status perm, lang fallback
Fix Folia crashes/races and align docs/metadata with reality.

Folia:
- BypassManager: route debounced save through PlatformRuntime.runLater
  (Bukkit scheduler throws on Folia); switch maps to ConcurrentHashMap
- FoliaRuntimeAdapter: teleportAsync for cross-region/world teleports

Behavior:
- update_available renders legacy section codes via LegacyComponentSerializer
- End return portal no longer blocked (only entry into the End)
- Elytra flight enforcement also stops already-gliding players
- wab.status permission (default true); per-subcommand permission checks
- per-key English fallback for partial/custom language files
- fix legacy recurring-allowed-days migration path for nether/end/elytra

Housekeeping:
- api-version 1.16 -> 1.20; getDescription -> getPluginMeta; URL -> URI
- bStats charts *_disabled -> *_blocking; shade into libs.bstats sub-package
- config-version field with mismatch warning
- rename isRestricted -> hasNoBypass
- README/Modrinth: drop false Spigot/Bukkit support; fix schedule docs
- release workflow runs tests; add .gitignore
- tests: BypassManagerTest, LanguageManagerTest

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>